--- a/quero_cafe.html
+++ b/quero_cafe.html
@@ -10,6 +10,7 @@
 </title>
 
 <body>
+
   <header>
       <nav>
         <ul>
@@ -18,24 +19,25 @@
           <li>Contato<li>
         </ul>
       </nav>
-    <img class="logo" src="querocafelogo.png">
+    <img class="logo" src="images/querocafelogo.png">
   </header>
 
   <main>
-    <div id="caixa">
-  <h2 class="titulocafes">Nossos Cafés</h2> 
+    <div id="container">
+      <h2 class="titulocafes">Nossos Cafés</h2> 
 
-    <ul>
-      <li><img class="sacocafe1" src="sacocafe1.png"></li>
-      <li><img class="sacocafe2" src="sacocafe2.png"></li>
-      <li><img class="sacocafe3" src="sacocafe3.png"></li>
-      <li><img class="sacocafe4" src="sacocafe4.png"></li>
-    </ul>
+      <ul>
+        <li><img class="sacocafe1" src="images/sacoscafe/sacocafe1.png"></li>
+        <li><img class="sacocafe2" src="images/sacoscafe/sacocafe2.png"></li>
+        <li><img class="sacocafe3" src="images/sacoscafe/sacocafe3.png"></li>
+        <li><img class="sacocafe4" src="images/sacoscafe/sacocafe4.png"></li>
+      </ul>
     </div>
   </main>
+
 </body>
 
   <footer>
-    <img src="querocafelogopreto.png">
+    <img src="images/querocafelogopreto.png">
     <p class="copyright">&copy Copyright 2022 Quero Cafe</p>
   </footer>
