Homepage images, welcome div, better header

--- a/quero_cafe.html
+++ b/quero_cafe.html
@@ -12,17 +12,26 @@
 <body>
 
   <header>
-      <nav>
-        <ul>
-          <li>Nossos Cafés</li>
-          <li>Sobre Nós</li>
-          <li>Contato<li>
-        </ul>
-      </nav>
+
+    <div id="blackBox"></div>
+    <nav>
+      <ul>
+        <li>Nossos Cafés</li>
+        <li>Sobre Nós</li>
+        <li>Contato<li>
+      </ul>
+    </nav>
+
     <img class="logo" src="images/querocafelogo.png">
+
   </header>
 
   <main>
+    <div id="welcomeDiv">
+      <h2>Bem Vindo a nossa loja!</h2>
+      <p>Sua jornada aromática começa aqui!</p> 
+    </div>  
+
     <div id="container">
       <h2 class="titulocafes">Nossos Cafés</h2> 
 
